# events-service

./: .env  Dockerfile  alembic.ini  compose.yaml  pyproject.toml
.devcontainer/: compose.yaml  devcontainer.json
.github/workflows/: test-service.yml
charts/opa/policies/: eventsservice.rego
src/events_service/: api.py  database.py  main.py  models.py  schemas.py  settings.py
src/events_service/alembic/: env.py
src/events_service/alembic/versions/: c79492991747_initial_version.py
tests/: conftest.py  test_api.py  test_database.py  test_main.py
